# zdppy_metasploit

./: .gitignore  README.md  pyproject.toml
examples/: z01_建立连接.py  z02_获取可利用模块列表.py  z03_利用模块.py  z04_查看目标.py  z05_找到目标的有效载荷.py  z06_查看和设置模块选项.py  z07_查看必须要设置的模块选项.py  z08_创建控制台.py  z09_查看会话列表.py  z10_使用call调用远程接口.py  z11_auth登录获取token.py  z12_生成token.py  z13_获取token列表.py  z15_删除token.py
examples/use_example/: Vsftpd源码包后面漏洞.py
examples/z01_rpc/z01_auth/: z01_auth登录获取token.py  z02_生成token.py  z03_获取token列表.py  z04_添加token.py  z05_删除token.py
examples/z01_rpc/z02_core/: z01_添加模块路径.py  z02_获取模块状态.py  z03_重新加载模块.py  z04_保存配置.py  z05_设置全局变量.py  z06_获取全局变量.py  z07_删除全局变量.py  z08_获取进程列表.py  z09_杀死进程.py  z10_获取版本信息.py  z11_停止服务.py
examples/z01_rpc/z03_console/: z01_新建console.py  z02_销毁console.py  z03_获取console列表.py  z04_向console写入数据.py  z05_读取console数据.py  z06_分离console会话.py  z07_关闭session会话.py  z08_获取tabs.py
examples/z01_rpc/z04_jobs/: z01_获取任务列表.py  z02_获取任务信息.py  z03_停止一个任务.py
examples/z01_rpc/z05_modules/: z01_获取可利用的模块.py  z02_获取辅助模块列表.py  z03_获取已提交的模块列表.py  z04_获取有效载荷列表.py  z05_获取编码器列表.py  z06_获取NOP列表.py  z07_获取模块的具体信息.py  z08_获取模块参数信息.py  z09_返回特定攻击兼容的有效负载.py  z10_返回特定post模块的兼容会话.py  (+14 more)
examples/z02_use_example/: z01_SambaMS-RPC Shell命令注入漏洞.py  z01_Vsftpd源码包后面漏洞.py  z01_使用Metasploit实现端口扫描.py
zdppy_metasploit/: __init__.py  exceptions.py  factory.py  zdppy_metasploit.py
zdppy_metasploit/pymetasploit3/: __init__.py  msfconsole.py  msfrpc.py  utils.py
zdppy_metasploit/rpc/: auth.py  console.py  core.py  health.py  job.py  module.py  plugin.py  session.py
(+23 files in other folders)
