[tool.poetry]
name = "zdppy_metasploit"
version = "0.1.0"
description = ""
authors = ["zhangdapeng520 <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
zdppy-log = "^0.1.9"
msgpack = "^1.0.4"
requests = "^2.28.0"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
